--- a/firm/package.json
+++ b/firm/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "Res Judicata",
+  "name": "res judicata",
   "version": "1.0.0",
-  "description": "The law firm code",
+  "description": "The law firm website for the Res Judicata website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "Stanley Mpoyi & Noah Green",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "ejs-mate": "^3.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.15"
   }
 }
