--- a/firm/.env
+++ b/firm/.env
@@ -1,4 +1,4 @@
-DB_HOST = 'classmysql.engr.oregonstate.edu',
+DB_HOST = 'classmysql.engr.oregonstate.edu'
 DB_NAME = 'cs340_mpoyis'
 DB_USER = 'cs340_mpoyis'
 DB_PASS = '1991'
