--- a/firm/package.json
+++ b/firm/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.6",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
+    "forever": "^4.0.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15"
   }
